# API-Editor

./: .bandit.yml  .editorconfig  .eslintignore  .eslintrc.js  .eslintrc.json  .flake8  .gitignore  .gitlab-ci.yml  .mega-linter.yml  .mypy.ini  .prettierignore  .prettierrc.json  .pylintrc  CITATION.cff  LICENSE  README.md  build.gradle.kts  codecov.yml  gradle.properties  mkdocs.yml  mypy.ini  package-lock.json  package.json  pnpm-lock.yaml  pyproject.toml  release.config.js  settings.gradle.kts  setup.md  tsconfig.eslint.json
package-parser/: .gitignore  README.md  documentation.md  pyproject.toml
package-parser/migration_test_data/: api-editor.pstat  api-editor_improved_by_cache.pstat  api-editor_improved_by_cache_with_function.pstat  api-editor_improved_by_cache_without_id.pstat  migrate_test_data.bat  migrate_test_data.sh  migrated_annotations.json  migrated_annotationsv0.7.12.json  unsure_migrated_annotations.json  unsure_migrated_annotationsv0.7.12.json
package-parser/migration_test_data/api/: migrate_test_data.py
package-parser/migration_test_data/api/apiv1/: annotations_apiv1.json  library_api__api.json  library_api__api_dependencies.json
package-parser/migration_test_data/api/apiv2/: library_api__api.json  (+1 more)
package-parser/package_parser/: __main__.py  cli.py  main.py
package-parser/package_parser/cli/: _cli.py  _json_encoder.py  _read_and_write_file.py  _run_all.py  _run_annotations.py  _run_api.py  _run_migrate.py  _run_usages.py  _shared_constants.py
package-parser/package_parser/models/: _usages.py  annotation_models.py
package-parser/package_parser/out_sklearn/: sklearn__api_dependencies.json
package-parser/package_parser/utils/: _ASTWalker.py  __init__.py  _names.py  _parsing.py  _qnames.py  _strings.py
package-parser/purity_group_Prototype/: ast_purity_parser.py
package-parser/refined_types/: CategorizedDocstrings.md  ground_truth.json
package-parser/sklear_annotationsv102_per_package/: migrated_annotationsv1.2.0_cluster_.json  migrated_annotationsv1.2.0_compose_.json  migrated_annotationsv1.2.0_covariance_.json  migrated_annotationsv1.2.0_cross_decomposition_.json  migrated_annotationsv1.2.0_decomposition_.json  migrated_annotationsv1.2.0_ensemble_.json  migrated_annotationsv1.2.0_feature_selection_.json  migrated_annotationsv1.2.0_impute_.json  migrated_annotationsv1.2.0_inspection_.json  migrated_annotationsv1.2.0_linear_model_.json  migrated_annotationsv1.2.0_manifold_.json  migrated_annotationsv1.2.0_metrics_.json  migrated_annotationsv1.2.0_neighbors_.json  migrated_annotationsv1.2.0_neural_network_.json  migrated_annotationsv1.2.0_other_.json  migrated_annotationsv1.2.0_preprocessing_.json  migrated_annotationsv1.2.0_svm_.json  migrated_annotationsv1.2.0_tree_.json  migrated_annotationsv1.2.0_utils_.json  output_all.txt  unsure_migrated_annotationsv1.2.0_cluster_.json  unsure_migrated_annotationsv1.2.0_compose_.json  unsure_migrated_annotationsv1.2.0_cross_decomposition_.json  unsure_migrated_annotationsv1.2.0_decomposition_.json  unsure_migrated_annotationsv1.2.0_ensemble_.json  unsure_migrated_annotationsv1.2.0_feature_selection_.json  unsure_migrated_annotationsv1.2.0_impute_.json  unsure_migrated_annotationsv1.2.0_inspection_.json  unsure_migrated_annotationsv1.2.0_linear_model_.json  unsure_migrated_annotationsv1.2.0_manifold_.json  unsure_migrated_annotationsv1.2.0_metrics_.json  unsure_migrated_annotationsv1.2.0_neighbors_.json  unsure_migrated_annotationsv1.2.0_neural_network_.json  unsure_migrated_annotationsv1.2.0_other_.json  unsure_migrated_annotationsv1.2.0_preprocessing_.json  unsure_migrated_annotationsv1.2.0_svm_.json  unsure_migrated_annotationsv1.2.0_tree_.json  unsure_migrated_annotationsv1.2.0_utils_.json
package-parser/tests/data/: api_data.json  usage_data.json
package-parser/tests/model/: test_annotations.py  test_usages.py
package-parser/tests/models/: test_annotation_models.py  test_usages.py
package_parser/: .mega-linter.yml  README.md  pyproject.toml
package_parser/.github/workflows/: main.yml
package_parser/package_parser/: __main__.py  cli.py  main.py
package_parser/package_parser/package_parser/: main.py
package_parser/package_parser/utils/: _ASTWalker.py  __init__.py  _files.py  _qnames.py
package_parser/refined_types/: CategorizedBoundaries.md  boundaries.json  main.py
(+1509 files in other folders)
