[tool.poetry]
name = "package-parser"
version = "1.0.0"
description = "Analyze Python code."
authors = ["Lars Reimann <mail@larsreimann.com>"]
license = "MIT"

[tool.poetry.scripts]
parse-package = "package_parser.main:main"

[tool.poetry.dependencies]
python = "^3.10,<3.11"
astroid = "^2.14.1"
numpydoc = "^1.5"
spacy = "^3.2.5"
scipy = "^1.10.0"
levenshtein = "^0.20.9"
black = "^23.1.0"

[tool.poetry.dependencies.en_core_web_sm]
url = "https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.2.0/en_core_web_sm-3.2.0-py3-none-any.whl"

[tool.poetry.dev-dependencies]
pytest = "^7.2.1"
pytest-cov = "^4.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
