[tool.poetry]
name = "package-parser"
version = "0.0.1"
description = "Analyze Python code."
authors = ["Lars Reimann <mail@larsreimann.com>"]
license = "MIT"

[tool.poetry.scripts]
parse-package = "package_parser.main:main"

[tool.poetry.dependencies]
python = "^3.9"
astroid = "^2.8.2"
scikit-learn = "^1.0"
importlib-metadata = "^4.8.1"
numpydoc = "^1.1.0"
spacy = "^3.1.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
